--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.552.0",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
